<resources>
    <!-- 主页模块 -->
    <string name="app_name">宠悟</string>
    <string name="main_activity">主页</string>
    <string name="edit_Message">输入消息</string>
    <string name="button_send">发送</string>
    <string name="start_study">开始学习</string>

    <!-- 登录注册模块 -->
    <string name="registration">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="prompt_password">密码</string>
    <string name="title_activity_login">登录页面</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="welcome">"欢迎"</string>
    <string name="user_id">账号</string>
    <string name="prompt_phone">手机号</string>
    <string name="invalid_username">无效的用户名</string>
    <string name="invalid_password">密码必须超过5个字符</string>
    <string name="login_failed">"登陆失败"</string>
    <string name="sex">性别</string>

    <!-- 主菜单模块 -->
    <string name="about_us">关于我们</string>
    <string name="action_sign_in">登陆</string>

    <!-- 设置模块 -->
    <string name="title_activity_settings">设置界面</string>

    <!-- 设置页面模块1 -->
    <string name="messages_header">账户</string>
    <string name="user_name">用户名</string>
    <string name="cloud_synchronization">云端同步</string>
<!--    <string name="forget_password">忘记密码</string>-->
    <string name="output_data">导出数据</string>

    <!-- 设置页面模块2 -->
    <string name="pet">宠物</string>\
    <string name="pet_name">宠物名</string>
    <string name="pet_class">宠物种类</string>
    <string name="if_play_with_friends">是否可以与好友一起玩耍</string>
    <string name="shop">商店</string>

    <!-- 设置页面模块3 -->
    <string name="setting">设置</string>
    <string name="stay_work">保持屏幕开启</string>
    <string name="open_music">开启音效</string>
    <string name="other_settings">进阶设定</string>

    <!-- 设置页面模块4 -->
    <string name="about">关于</string>
    <string name="frequent_problems">常见问题</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="study">学习</string>

    <!-- 商店模块 -->
    <string name="dried_fish">鱼干</string>
    <string name="title_activity_shop">商店</string>
    <string name="titie_shop">商店</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_email">Email</string>
</resources>